some modification in dashboard language file

--- a/dashboard/locale/prs/LC_MESSAGES/django.po
+++ b/dashboard/locale/prs/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-01 14:03+0430\n"
+"POT-Creation-Date: 2020-09-01 14:23+0430\n"
 "PO-Revision-Date: 2017-02-20 09:15+0430\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -2153,7 +2153,9 @@ msgstr "نفوس پیشبینی شده در ساحات خطر برف کوچ "
 msgid ""
 "Population estimated to be living Avalanche Area for which there is "
 "currently snow coverage information available (updated daily)."
-msgstr "جمعیت تخمین زده می شود ساکن منطقه بهمن باشد که در حال حاضر اطلاعات مربوط به برف برای آن موجود است (روزانه به روز می شود)."
+msgstr ""
+"جمعیت تخمین زده می شود ساکن منطقه بهمن باشد که در حال حاضر اطلاعات مربوط به "
+"برف برای آن موجود است (روزانه به روز می شود)."
 
 #: .\templates\v2\dash_aforecast.html:183
 msgid ""
@@ -2161,7 +2163,10 @@ msgid ""
 "and Depth and the presence of avalanche areas. This is a very rudimentary "
 "risk prediction as there are no accurate/sufficient ground observation "
 "stations available."
-msgstr "خطر پیش بینی بهمن فقط بر اساس موارد زیر است: پوشش و عمق برف کنونی و وجود مناطق بهمن. این یک پیش بینی خطر ابتدایی است زیرا هیچ ایستگاه مشاهده زمینی دقیق / کافی در دسترس نیست"
+msgstr ""
+"خطر پیش بینی بهمن فقط بر اساس موارد زیر است: پوشش و عمق برف کنونی و وجود "
+"مناطق بهمن. این یک پیش بینی خطر ابتدایی است زیرا هیچ ایستگاه مشاهده زمینی "
+"دقیق / کافی در دسترس نیست"
 
 #: .\templates\v2\dash_aforecast.html:190
 #: .\templates\v2\dash_aforecast.html:224 .\templates\v2\dash_arisk.html:239
@@ -2224,7 +2229,11 @@ msgid ""
 "(avalanche trigger, avalanche chute and run-out areas). The avalanche areas "
 "were only computed for areas which had snow cover of the past 9 years. The "
 "trigger areas were calculated using established methodologies"
-msgstr "جمعیت تخمین زده می شود که در ساختمانهای مناطق بهمن زندگی می کنند (ماشه بهمن ، ناودان بهمن و مناطق خالی از سکنه). مناطق بهمن فقط برای مناطقی محاسبه شده است که در 9 سال گذشته دارای برف بوده اند. مناطق ماشه ای با استفاده از روش های ثابت محاسبه شد."
+msgstr ""
+"جمعیت تخمین زده می شود که در ساختمانهای مناطق بهمن زندگی می کنند (ماشه "
+"بهمن ، ناودان بهمن و مناطق خالی از سکنه). مناطق بهمن فقط برای مناطقی محاسبه "
+"شده است که در 9 سال گذشته دارای برف بوده اند. مناطق ماشه ای با استفاده از "
+"روش های ثابت محاسبه شد."
 
 #: .\templates\v2\dash_arisk.html:350 .\templates\v2\dash_main.html:1274
 msgid "Moderate Risk"
@@ -2882,7 +2891,9 @@ msgstr "تعداد حوادث و تلفات "
 msgid ""
 "List of Incidents and Casualties grouped by Target Type. The data is updated "
 "each working day."
-msgstr "لیست حوادث و تلفات گروه بندی شده بر اساس نوع هدف. داده ها هر روز کاری به روز می شوند."
+msgstr ""
+"لیست حوادث و تلفات گروه بندی شده بر اساس نوع هدف. داده ها هر روز کاری به روز "
+"می شوند."
 
 #: .\templates\v2\dash_haccess.html:535
 msgid "Number of Casualties by Target Type"
