fix incorrect risk level number on dashboard drought pie chart on dari/pashto, bar chart number not appear, domain check on weather tab in geoexplorer

--- a/dashboard/locale/prs/LC_MESSAGES/django.po
+++ b/dashboard/locale/prs/LC_MESSAGES/django.po
@@ -1465,7 +1465,7 @@ msgstr "احتمال"
 #: .\templates\v2\dash_main.html.py:760 .\templates\v2\dash_main.html:890
 #: .\templates\v2\dash_main.html.py:1227 .\templates\v2\dash_main.html:1292
 msgid "Extreme"
-msgstr "شدید"
+msgstr "شدیدتر"
 
 #: .\templates\pages\floodforecast.html:43
 #: .\templates\pages\floodforecast.html:113
